Fix visibility and sizes of Byline font

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,9 +27,10 @@ $colorOrange3: #b430a0;
 $colorOrange3: #732c38;
 $colorOrange3: #ea436a;
 $colorBlack: #111;
-$colorGray: #333; //already in template
+$colorGray: #333; //already in bootstrap template
 $colorGrayBG: #ccc;
-$colorGrayText: #555;
+// $colorGrayText: #555;
+$colorGrayText: #333;
 $colorLightGray: #eee;
 
 $colorSchemePageBG: white;
@@ -540,12 +541,14 @@ body {
   color: $colorSchemeBylineText;
   height: 100%;
   text-align: center;
+  opacity: .7;
+
+  // change position of byline box
   @media (max-width: 767px) {
     padding: 0;
     #bylineVerticalPosition {
-      //@include vTop;
       background: $colorSchemeBylineBG;
-      opacity: .6;
+      //@include vTop;
       margin: 0;
       > *:first-child { /* or .verticalCenter > *:first-child ?? */ 
         margin-top: 0;
@@ -563,28 +566,31 @@ body {
   }
   @media (min-width: 768px) {
     background: $colorSchemeBylineBG;
-    opacity: .6;
     #bylineVerticalPosition {
       @include vCenter;
     }
   }
-  h1 {
-    font-family: $fontPageHeader;
-    @media (max-width: 400px) {
-      font-size: 30px;
-    }
-    // font-size: 36px; //already in bootstrap.css
-    @media (min-width: 768px) {
-      font-size: 28px;
-    }
-    @media (min-width: 992px) {
-      font-size: 32px;
-    }
-  }
+
+  // change byline sizes (font-face set by bootstrap template)
   h2 {
-    font-size: 24px;
     font-weight: normal;
     margin-top: 10px;
+  }
+  @media (max-width: 400px) {
+    h1 { font-size: 32px; }
+    h2 { font-size: 24px; }
+  }
+  @media (min-width: 401px) {
+    h1 { font-size: 36px; } //set to 36px in bootstrap.css
+    h2 { font-size: 26px; }
+  }
+  @media (min-width: 768px) {
+    h1 { font-size: 30px; }
+    h2 { font-size: 22px; }
+  }
+  @media (min-width: 992px) {
+    h1 { font-size: 34px; }
+    h2 { font-size: 24px; }
   }
 }
 
